<?xml version="1.0"?>
<package>

  <name>lpms_imu</name>
  <version>0.1.0</version>
  <description>ROS driver for lpms_imu sensors.</description>
  <maintainer email="damjan.miklic@fer.hr">Damjan Miklic</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/lpms_imu/</url>
  <author email="juraj.orsulic@fer.hr">Juraj Orsulic</author>
  <author email="mirko.kokot@fer.hr">Mirko Kokot</author>
  <author email="damjan.miklic@fer.hr">Damjan Miklic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>timesync</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>timesync</run_depend>
  
</package>
